# agent-document-classifier

./: Dockerfile  Makefile  README.md  docker-compose.yaml  otel-config.yaml  pyproject.toml  start.sh
.github/workflows/: build-push-deploy.yml
app/: main.py  schemas.py  utils.py
app/agent/: agent.py  types.py  utils.py
app/core/: config.py  deps.py  logger.py  middleware.py
terraform/agent/: main.tf  variables.tf  version.tf
terraform/ecr/: data.tf  main.tf  variables.tf  version.tf
